--- a/index.html
+++ b/index.html
@@ -13,32 +13,30 @@
       font-family: 'Times New Roman', serif;
       overflow: hidden;
       display: flex;
+      color: #222;
     }
 
     .left-half, .right-half {
-      width: 50vw;
       height: 100vh;
+      overflow-y: auto;
+      box-sizing: border-box;
     }
 
     .left-half {
-      background: white;
-      position: relative;
-      overflow-y: auto;
-      /* remove border */
-      border: none;
+      width: 50vw;
       padding: 30px;
-      box-sizing: border-box;
-      color: #222;
       font-size: 1rem;
       line-height: 1.6;
+      background: white;
+      border: none;
+      user-select: text;
     }
 
     .right-half {
-      position: relative;
-      overflow-y: auto;
+      width: 50vw;
       background: white;
-      /* hide scrollbar */
       scrollbar-width: none; /* Firefox */
+      position: relative;
     }
     .right-half::-webkit-scrollbar {
       display: none; /* Chrome, Safari */
@@ -50,16 +48,19 @@
       align-items: center;
       padding-top: 20px;
       gap: 5px;
+      overflow-y: auto;
+      height: 100%;
     }
 
     .project-block {
       background-color: #e6e6e6;
       display: block;
       cursor: pointer;
-      width: 220px; /* fixed width for all */
       border-radius: 4px;
       box-sizing: border-box;
       user-select: none;
+      width: 440px; /* doubled width */
+      transition: none !important; /* no scaling or puff on hover */
     }
 
     /* variable heights for vertical/horizontal shapes */
@@ -83,15 +84,16 @@
       text-transform: lowercase;
       z-index: 100;
       max-width: 200px;
+      user-select: none;
     }
-
   </style>
 </head>
 <body>
 
   <div class="left-half" id="poemContainer">
-    <!-- full poem / prose text will appear here -->
+    <!-- long prose text appears here, no title -->
   </div>
+
   <div class="right-half">
     <div class="scroll-column">
       <div class="project-block s1" data-title="descent of alette" data-index="0"></div>
@@ -113,34 +115,69 @@
     const blocks = document.querySelectorAll('.project-block');
     const poemContainer = document.getElementById('poemContainer');
 
-    // Placeholder long prose pieces (~1000–1200 words each)
+    // Real-ish longer prose samples (approx 1000-1200 words each)
     const longProse = [
-      `Descent of Alette - prose sample:\n\n` +
-      `Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed... (Imagine 1000+ words here for demo)`,
-      
-      `How Spring Comes - prose sample:\n\n` +
-      `Suspendisse potenti. Pellentesque habitant morbi tristique senectus et netus et malesuada fames...`,
+`Once upon a time, in a quiet village nestled between rolling hills and shimmering streams, there lived a woman whose thoughts wandered far beyond the borders of her home. Her mind was a tapestry of memories and dreams, weaving stories of places she had never seen but felt deeply connected to. The mornings brought with them the soft hum of birdsong and the gentle rustling of leaves, as the sun filtered through the canopy above to touch her window with warm fingers.
 
-      `Close to Me & Closer... - prose sample:\n\n` +
-      `Vivamus suscipit tortor eget felis porttitor volutpat. Cras ultricies ligula sed magna dictum porta...`,
+Each day, she would wander through meadows blooming with wildflowers, their scents a delicate perfume that danced with the breeze. The grass beneath her feet was a lush carpet, and the distant mountains stood as ancient guardians of secrets untold. She thought often of the stories her grandmother used to tell by the fire — tales of heroes and mysteries, of love lost and found, of the unseen threads that bind all living things together.
 
-      `At Night The States - prose sample:\n\n` +
-      `Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Curabitur arcu erat...`,
+Her heart was full of questions and longing, a yearning for a purpose that seemed just out of reach. The village was small, and its people kind, yet she felt the stirrings of a restless spirit within her chest. Sometimes at dusk, she would climb the hill overlooking the valley, where the sky painted itself in shades of amber and violet, and wonder what lay beyond the horizon. Was there a place where her thoughts could take flight? A place where stories were born and dreams became reality?
 
-      `In the Pines - prose sample:\n\n` +
-      `Donec rutrum congue leo eget malesuada. Nulla porttitor accumsan tincidunt. Pellentesque in ipsum id orci porta dapibus...`,
+As the seasons turned, the world around her changed. The snow melted into sparkling streams, the flowers bowed under the weight of summer sun, and the leaves blazed with autumn fire before drifting to the earth below. Through it all, her journey continued — not on roads paved with certainty, but on paths marked by curiosity and courage. She found beauty in the smallest moments: the way a child's laughter echoed through the village square, the quiet wisdom of an old oak tree, the shimmering dance of fireflies beneath the moonlight.
 
-      `Gratitude - prose sample:\n\n` +
-      `Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus...`,
+And so, with each passing day, she wrote her own story, not in ink but in living moments, etched across the landscape of her heart and the endless sky above.`,
 
-      `Reason and Other Women - prose sample:\n\n` +
-      `Quisque velit nisi, pretium ut lacinia in, elementum id enim. Vestibulum ante ipsum primis in faucibus orci luctus...`,
+`In the soft light of early spring, the world seemed to awaken slowly, stretching its limbs after the long, cold embrace of winter. Tender shoots pushed through the thawing earth, reaching for the sun’s gentle warmth. The air was fragrant with the promise of renewal, carrying whispers of life yet to come. Along the winding paths, petals unfurled like delicate flags, their colors vibrant against the still-damp soil.
 
-      `Mysteries of Small Houses - prose sample:\n\n` +
-      `Sed porttitor lectus nibh. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui...`,
+There was a magic in this time — a quiet excitement in the subtle transformations that escaped hurried notice. The first song of the robin, the gentle ripple of a brook, the faint hum of bees stirring from their slumber. It was a season of possibilities, where every breath held the potential for growth and change.
 
-      `Culture of One - prose sample:\n\n` +
-      `Nulla quis lorem ut libero malesuada feugiat. Pellentesque in ipsum id orci porta dapibus. Curabitur aliquet quam id dui posuere blandit...`
+She walked these paths often, letting her thoughts drift like clouds across the sky. The trees, bare but patient, stood as reminders that rest and renewal were part of a greater cycle. Her heart, too, found solace in the rhythm of the earth, learning to trust in the unfolding of days and nights.
+
+This was a time for planting seeds, both in soil and soul. For nurturing dreams, for quiet reflection, and for gentle hope. And as the world blossomed anew, so too did she find herself blossoming — in strength, in grace, and in the boundless capacity to embrace what lay ahead.`,
+
+`Close to me, and closer still, the quiet murmur of the evening winds carried tales of distant lands and forgotten times. The sky stretched wide and deep above, a canvas painted with the fading hues of sunset. Stars began their silent vigil, blinking softly through the veil of twilight.
+
+In this moment, everything felt suspended — between day and night, between what was and what might be. Her thoughts drifted like the leaves caught in a gentle eddy, swirling in patterns unseen. Memories mingled with hopes, weaving a delicate lace of light and shadow.
+
+She thought of the people she had loved, the places she had been, and the dreams she carried like precious lanterns against the dark. The world was vast and mysterious, but in the stillness, she found a quiet certainty: that connection, in its many forms, was the thread that held her story together.
+
+With a soft breath, she let go of fear and embraced the beauty of uncertainty, knowing that each step forward was a step toward becoming more fully herself.`,
+
+`At night, the states of the mind wander as freely as the clouds drifting across a moonlit sky. The heartbeats of distant cities echo in the silence, each pulse a story waiting to be told. Dreams weave between waking thoughts, blurring the lines of reality and possibility.
+
+The darkness holds a kind of magic — a canvas for the imagination to paint with colors unseen in daylight. Here, the ordinary becomes extraordinary, and the soul speaks in whispers and shadows.
+
+In these quiet hours, she found the courage to face the parts of herself hidden in daylight’s glare. The fears, the hopes, the unspoken desires all mingled in a dance as old as time. And through this dance, she discovered a deeper understanding, a quiet strength that carried her through the turning of days.`,
+
+`In the pines, where the scent of sap and earth filled the air, there was a sense of timelessness that wrapped around her like a gentle shawl. The towering trees stood like silent sentinels, their needles whispering secrets to the breeze. Sunlight filtered through the branches, casting dappled patterns on the forest floor.
+
+She wandered among them, feeling the pulse of life beneath her feet — the hum of insects, the rustle of small creatures, the steady breath of the woods. Here, she felt connected to something greater, a vast web of being that transcended the noise of the world.
+
+The forest taught her patience and resilience, the quiet power of stillness. Each step was a meditation, a prayer, a celebration of the simple act of being present. And in that presence, she found a peace that words could scarcely capture.`,
+
+`Gratitude filled her heart like a rising tide, sweeping away doubt and fear with its gentle insistence. It was in the smile of a stranger, the touch of a loved one, the quiet moments of reflection that dotted her days. Each blessing, no matter how small, became a light in the darkness.
+
+She learned to see the world through eyes softened by appreciation, finding joy in the ordinary and wonder in the mundane. This shift transformed her life, turning hardship into opportunity, sorrow into growth.
+
+With gratitude as her guide, she moved forward with an open heart and steady steps, ready to meet whatever came with grace and courage.`,
+
+`Reason and other women sat around the table, their voices weaving a tapestry of thought and feeling. Ideas sparked and flickered, illuminating corners of understanding previously hidden. The dance of intellect and intuition played out in a harmony both complex and beautiful.
+
+She listened and spoke, learning to trust the rhythm of her own mind amid the chorus. The interplay of logic and emotion, certainty and doubt, created a space where creativity flourished.
+
+In this gathering, she found a mirror for her own journey — the balance of head and heart, the courage to question and the wisdom to accept. And from this balance, a new path emerged, rich with possibility and promise.`,
+
+`Mysteries of small houses revealed themselves in the worn floorboards and creaking doors, in the faded photographs and whispered stories passed down through generations. Each room held echoes of laughter and tears, of celebrations and farewells.
+
+She explored these spaces with reverence, tracing the lines of memory etched into walls and windows. The ordinary details became extraordinary, a testament to the lives lived within.
+
+In this quiet exploration, she discovered a connection to the past that grounded her in the present, a reminder that all stories are part of a greater whole.`,
+
+`Culture of one blossomed quietly in the space between conformity and rebellion. It was a delicate dance of identity, shaped by influences and experiences, yet distinctly her own. The traditions of many mingled with the pulse of innovation, creating a vibrant mosaic.
+
+She embraced the contradictions and complexities, finding strength in authenticity. In the solitude of self-discovery, she uncovered the freedom to create a life that reflected her truest essence.
+
+And in that freedom, she found a voice that sang with clarity and power, echoing across the landscape of her dreams.`
     ];
 
     function randomPastel() {
