--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
   <div class="right-half">
     <div class="scroll-column">
-      <div class="project-block s1" data-title="descent of alette" data-index="0"></div>
+      <div class="project-block s1" data-title="last day on earth manifesto" data-index="0"></div>
       <div class="project-block s2" data-title="how spring comes" data-index="1"></div>
       <div class="project-block s3" data-title="close to me & closer..." data-index="2"></div>
       <div class="project-block s4" data-title="at night the states" data-index="3"></div>
@@ -121,15 +121,11 @@
 
     // Real-ish longer prose samples (approx 1000-1200 words each)
     const longProse = [
-`Once upon a time, in a quiet village nestled between rolling hills and shimmering streams, there lived a woman whose thoughts wandered far beyond the borders of her home. Her mind was a tapestry of memories and dreams, weaving stories of places she had never seen but felt deeply connected to. The mornings brought with them the soft hum of birdsong and the gentle rustling of leaves, as the sun filtered through the canopy above to touch her window with warm fingers.
+`I am nearing a confine. Miles high and entire non - nato member nations long is the wall I seem to have hit. There were foxes here last time I checked, yet as the woman spoke today I find them mangled, bloodied. They do not say a thing, so I pass, I’m restless. Overstimulated to the point of no return I choose to choose. My last decision a grand finish the way only a retired poet stops thinking or perhaps stops to think. What I am is many things but what I’m not are none. Grammatically this might not make much sense but all I ask is for someone to listen. Simple as that, ignoring how tough it is to focus on twelve streams at once I beg: have you ever not known of an ad? Has there been a time pre - advertisement? Love the word! Very French! Akin baguette.
 
-Each day, she would wander through meadows blooming with wildflowers, their scents a delicate perfume that danced with the breeze. The grass beneath her feet was a lush carpet, and the distant mountains stood as ancient guardians of secrets untold. She thought often of the stories her grandmother used to tell by the fire — tales of heroes and mysteries, of love lost and found, of the unseen threads that bind all living things together.
+There once was a family unit surrounding whatever fragment of my body had surfaced. A sense of sliminess, a scent in the air but the chunk borders are hidden and the command I seem to forget. I must admit, this was a Minecraft reference, sue me if for nostalgia’s sake. 
 
-Her heart was full of questions and longing, a yearning for a purpose that seemed just out of reach. The village was small, and its people kind, yet she felt the stirrings of a restless spirit within her chest. Sometimes at dusk, she would climb the hill overlooking the valley, where the sky painted itself in shades of amber and violet, and wonder what lay beyond the horizon. Was there a place where her thoughts could take flight? A place where stories were born and dreams became reality?
-
-As the seasons turned, the world around her changed. The snow melted into sparkling streams, the flowers bowed under the weight of summer sun, and the leaves blazed with autumn fire before drifting to the earth below. Through it all, her journey continued — not on roads paved with certainty, but on paths marked by curiosity and courage. She found beauty in the smallest moments: the way a child's laughter echoed through the village square, the quiet wisdom of an old oak tree, the shimmering dance of fireflies beneath the moonlight.
-
-And so, with each passing day, she wrote her own story, not in ink but in living moments, etched across the landscape of her heart and the endless sky above.`,
+They say top of the bell curve is average though I refuse to believe them. Whoever said “them” really is. Once there was a time I’d get called special and I will not ever settle for less. In the year 2024 I saw a forest burn in the deep Pacific north-west. I saw starfish dead with a virus, not the Wuhan kind although that would be funny in a sense. The way 9/11 is funny as long as you’re not the one dead. `,
 
 `In the soft light of early spring, the world seemed to awaken slowly, stretching its limbs after the long, cold embrace of winter. Tender shoots pushed through the thawing earth, reaching for the sun’s gentle warmth. The air was fragrant with the promise of renewal, carrying whispers of life yet to come. Along the winding paths, petals unfurled like delicate flags, their colors vibrant against the still-damp soil.
 
