--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="stylesheet" href="style.css">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Portfolio</title>
@@ -25,6 +24,10 @@
       background: white;
       position: relative;
       overflow-y: auto;
+      padding: 30px;
+      font-size: 18pt;
+      line-height: 1.6;
+      color: #222;
     }
 
     .right-half {
@@ -37,7 +40,6 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding-top: 0px;
       gap: 0px;
       height: 100%;
       overflow-y: auto;
@@ -49,12 +51,11 @@
     }
 
     .project-block {
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
       display: block;
       cursor: pointer;
       width: 480px;
+      background-size: cover;
+      background-position: center;
     }
 
     .s1, .s3, .s5, .s7 {
@@ -77,37 +78,25 @@
       z-index: 100;
       max-width: 200px;
     }
-
-    .poem-container {
-      position: absolute;
-      top: 0;
-      left: 0;
-      padding: 30px;
-      width: 100%;
-      height: 100%;
-      background: white;
-      overflow-y: auto;
-      color: #222;
-      font-size: 18pt;
-      line-height: 1.6;
-    }
   </style>
 </head>
 <body>
 
-  <div class="left-half" id="poemContainer"></div>
+  <div class="left-half" id="poemContainer">
+    <!-- prose text appears here on click -->
+  </div>
 
   <div class="right-half">
     <div class="scroll-column">
-      <div class="project-block s1" data-title="last day on earth manifesto" data-index="0"></div>
-      <div class="project-block s2" data-title="how spring comes" data-index="1"></div>
-      <div class="project-block s3" data-title="close to me & closer..." data-index="2"></div>
-      <div class="project-block s4" data-title="at night the states" data-index="3"></div>
-      <div class="project-block s5" data-title="in the pines" data-index="4"></div>
-      <div class="project-block s6" data-title="gratitude" data-index="5"></div>
-      <div class="project-block s7" data-title="reason and other women" data-index="6"></div>
-      <div class="project-block s8" data-title="mysteries of small houses" data-index="7"></div>
-      <div class="project-block s9" data-title="culture of one" data-index="8"></div>
+      <div class="project-block s1" data-title="last day on earth manifesto"></div>
+      <div class="project-block s2" data-title="how spring comes"></div>
+      <div class="project-block s3" data-title="close to me & closer..."></div>
+      <div class="project-block s4" data-title="at night the states"></div>
+      <div class="project-block s5" data-title="in the pines"></div>
+      <div class="project-block s6" data-title="gratitude"></div>
+      <div class="project-block s7" data-title="reason and other women"></div>
+      <div class="project-block s8" data-title="mysteries of small houses"></div>
+      <div class="project-block s9" data-title="culture of one"></div>
     </div>
   </div>
 
@@ -119,15 +108,21 @@
     const poemContainer = document.getElementById('poemContainer');
 
     const imageFiles = [
-      '1290.jpg',
-      '12103.jpg',
-      '12106.jpg',
-      '1290.jpg',
-      '12103.jpg',
-      '12106.jpg',
-      '1290.jpg',
-      '12103.jpg',
-      '12106.jpg'
+      '1290.jpg', '12103.jpg', '12106.jpg',
+      '1290.jpg', '12103.jpg', '12106.jpg',
+      '1290.jpg', '12103.jpg', '12106.jpg'
+    ];
+
+    const longProse = [
+`I am nearing a confine. Miles high and entire non - nato member nations long is the wall I seem to have hit. There were foxes here last time I checked...`, 
+`In the soft light of early spring, the world seemed to awaken slowly, stretching its limbs after the long, cold embrace of winter...`, 
+`Close to me, and closer still, the quiet murmur of the evening winds carried tales of distant lands and forgotten times...`, 
+`At night, the states of the mind wander as freely as the clouds drifting across a moonlit sky. The heartbeats of distant cities echo in the silence...`, 
+`In the pines, where the scent of sap and earth filled the air, there was a sense of timelessness that wrapped around her like a gentle shawl...`, 
+`Gratitude filled her heart like a rising tide, sweeping away doubt and fear with its gentle insistence...`, 
+`Reason and other women sat around the table, their voices weaving a tapestry of thought and feeling...`, 
+`Mysteries of small houses revealed themselves in the worn floorboards and creaking doors...`, 
+`Culture of one blossomed quietly in the space between conformity and rebellion...`
     ];
 
     blocks.forEach((block, i) => {
@@ -143,8 +138,7 @@
       });
 
       block.addEventListener('click', () => {
-       const index = parseInt(block.getAttribute('data-index'), 10);
-        poemContainer.innerText = longProse[index];
+        poemContainer.innerText = longProse[i];
       });
     });
 
