--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     }
 
     .scroll-column::-webkit-scrollbar {
-      display: none;
+      display:;
     }
 
     .project-block {
@@ -56,14 +56,6 @@
       width: 480px;
       background-size: cover;
       background-position: center;
-    }
-
-    .s1, .s3, .s5, .s7 {
-      height: 640px;
-    }
-
-    .s2, .s4, .s6, .s8, .s9 {
-      height: 360px;
     }
 
     .cursor-text {
